--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,12 @@
 [submodule "bundle/nerdtree"]
 	path = bundle/nerdtree
 	url = https://github.com/scrooloose/nerdtree
+[submodule "bundle/ctrlp.vim"]
+	path = bundle/ctrlp.vim
+	url = https://github.com/kien/ctrlp.vim
+[submodule "bundle/vim-fugitive"]
+	path = bundle/vim-fugitive
+	url = https://github.com/tpope/vim-fugitive.git
+[submodule "bundle/taglist.vim"]
+	path = bundle/taglist.vim
+	url = http://github.com/vim-scripts/taglist.vim.git
