--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "bundle/taglist.vim"]
 	path = bundle/taglist.vim
 	url = http://github.com/vim-scripts/taglist.vim.git
+[submodule "bundle/tagbar"]
+	path = bundle/tagbar
+	url = https://github.com/majutsushi/tagbar.git
